=== 0.0.13 2010-12-08

* 3 minor enhancements:
  * Fixed f:substring and f:starts-with?
  * Added f:random(n) to return a random integer in (1,n)
  * Fix escaping of single and double quotes in expressions

=== 0.0.12 2010-12-03

* 1 major enhancement:
  * Added <template /> element to libraries

* 2 minor enhancements:
  * Fixed various XSLT issues with form markup
  * Fixed scope issue that caused <for-each /> failure with @as

=== 0.0.11 2010-11-11

* 1 bug fix
  * Type handling - minor corrections

=== 0.0.10
* 1 minor enhancement:
  * Form markup supports a selection type

* 1 bug fix
  * Find type methods correctly

=== 0.0.9

* 11 major enhancements:
  * Form markup is now namespaced and limited to the structural elements
    (form, container, group, option) and interactive elements (asset,
    selection, password, submission, text)
  * Tuples in expressions are now [...] instead of ([...])
  * Tag libraries can now specify an XSLT for transforming to HTML to
    add presentation capabilities
  * Tag libraries can specify which presentation elements in their
    namespace should get default data from the application memory
  * Tag libraries can specify which presentation elements participate
    in the path construction for default data, caption, and error
    markup
  * Type conversions now are passed a context with the root node being
    converted
  * f:uri converts strings using namespace prefixes based on the namespace
    context of the string instead of the namespace context of the function
    call
  * appended '?' to the following functions: f:first, f:last, f:ends-with,
    f:empty, f:exists, f:only-one, f:one-or-more, and f:zero-or-one
  * added f:first(list), f:last(list), f:all-but-first(list), and
    f:all-but-last(list) for working with sequences
  * added basic Type object to manage conversions and type information
  * library actions can refer to other actions defined in the same library

1 minor enhancement